--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "expo": "~37.0.3",
+    "expo": "~41.0.1",
     "next": "latest",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@expo/next-adapter": "2.1.9",
+    "@babel/core": "~7.9.0",
+    "@expo/next-adapter": "2.1.72",
     "@types/node": "14.0.4",
-    "@types/react": "16.9.35",
-    "@types/react-dom": "16.9.8",
-    "@types/react-native": "0.62.10",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "4.0"
+    "@types/react": "~16.9.35",
+    "@types/react-dom": "~16.9.8",
+    "@types/react-native": "~0.63.2",
+    "babel-preset-expo": "8.3.0",
+    "typescript": "~4.0.0"
   },
   "license": "MIT"
 }
