--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "postinstall": "npx patch-package",
     "dev": "next",
     "build": "next build",
     "start": "expo start",
@@ -23,12 +24,14 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@expo/next-adapter": "2.1.72",
+    "@expo/next-adapter": "2.1.71",
     "@types/node": "14.0.4",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "8.3.0",
+    "css-minimizer-webpack-plugin": "^3.0.0",
+    "patch-package": "^6.4.7",
     "typescript": "~4.0.0"
   },
   "license": "MIT"
