--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "web": "next",
     "eject-next": "next-expo customize",
     "eject": "expo eject",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "latest": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
     "expo": "~41.0.1",
     "next": "latest",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.16.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "~7.14.3",
     "@expo/next-adapter": "2.1.71",
     "@types/node": "14.0.4",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
+    "@types/react": "~17.0.5",
+    "@types/react-dom": "~17.0.5",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "8.3.0",
     "css-minimizer-webpack-plugin": "^3.0.0",
     "patch-package": "^6.4.7",
-    "typescript": "~4.0.0"
+    "typescript": "~4.2.4"
   },
   "license": "MIT"
 }
