--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "postinstall": "npx patch-package",
     "dev": "next",
     "build": "next build",
     "start": "expo start",
@@ -13,6 +12,7 @@
     "eject-next": "next-expo customize",
     "eject": "expo eject",
     "type-check": "tsc",
+    "clean": "watchman watch-del-all && rimraf $TMPDIR/haste-map-* && rimraf $TMPDIR/metro-cache && rimraf yarn.lock && rimraf node_modules && yarn cache clean && yarn",
     "latest": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
@@ -20,19 +20,17 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.16.3"
+    "react-native": "0.63.2",
+    "react-native-web": "^0.16.3"
   },
   "devDependencies": {
     "@babel/core": "~7.14.3",
-    "@expo/next-adapter": "2.1.71",
+    "@expo/next-adapter": "2.1.72",
     "@types/node": "14.0.4",
     "@types/react": "~17.0.5",
     "@types/react-dom": "~17.0.5",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "~0.64.5",
     "babel-preset-expo": "8.3.0",
-    "css-minimizer-webpack-plugin": "^3.0.0",
-    "patch-package": "^6.4.7",
     "typescript": "~4.2.4"
   },
   "license": "MIT"
