--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eject-next": "next-expo customize",
     "eject": "expo eject",
     "type-check": "tsc",
-    "clean": "watchman watch-del-all && rimraf $TMPDIR/haste-map-* && rimraf $TMPDIR/metro-cache && rimraf yarn.lock && rimraf node_modules && yarn cache clean && yarn",
+    "clean": "watchman watch-del-all && rimraf yarn.lock $TMPDIR/haste-map-* $TMPDIR/metro-cache .expo/web .next node_modules && yarn cache clean && yarn",
     "latest": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
@@ -31,6 +31,8 @@
     "@types/react-dom": "~17.0.5",
     "@types/react-native": "~0.64.5",
     "babel-preset-expo": "8.3.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^7.1.1",
     "typescript": "~4.2.4"
   },
   "license": "MIT"
