--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.63.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "^0.16.3"
   },
   "devDependencies": {
